--- a/README.pod
+++ b/README.pod
@@ -30,4 +30,12 @@ variable. That should be easy to fix if somebody just checks the installation
 paths and tries if the playbook still works with older or newer versions.
 Patches are welcome... :)
 
+=head1 See also
+
+This playbook wouldn't be possible without the help from
+L<http://tech.jocke.no/2011/03/13/mysql-cluster-how-to-with-load-balancing-failover/>,
+which seems the be the best ressource on the web to get your mysql
+cluster running. Even better than Oracles documentation under
+L<http://dev.mysql.com/doc/refman/5.6/en/mysql-cluster.html>.
+
 =cut
